# Segnog

./: .dockerignore  .env  .env.example  .gitignore  .secrets.toml.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.detoverlay  IMPROVEMENTS.md  LICENSE  README.md  docker-compose.smoke-test2.yml  docker-compose.yml  entrypoint.sh  paper.md  pyproject.toml  segnog-ui.jsx  service.sh  settings.toml  setup.py  supervisor-segnog.conf  sync-data.sh  test_smoke_hebbian.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml
client/memory_client/: __init__.py  client.py  exceptions.py  grpc_transport.py  rest_transport.py
docs/: API.md  ARCHITECTURE.md  REFERENCE.md  observe-sequence.md
docs/superpowers/plans/: 2026-06-22-causal-graph-rag-search.md
docs/superpowers/specs/: 2026-06-22-causal-graph-rag-search-design.md
proto/memory/v1/: artifacts.proto  common.proto  episodes.proto  events.proto  knowledge.proto  pipelines.proto  smart.proto  state.proto
src/memory_service/: __init__.py  config.py  main.py  schema_org.py  scoring.py
src/memory_service/background/: __init__.py  rem_worker.py
src/memory_service/core/: __init__.py  hebbian.py  observe.py
src/memory_service/dto/: __init__.py  (+6 more)
tests/integration/: test_e2e_full.py  test_ontology_store.py  test_signatures.py
tests/unit/: test_schema_org.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: ForceGraph.jsx  SegnogUI.jsx  main.jsx
(+145 files in other folders)
