[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-service"
version = "0.1.0"
description = "General-purpose memory microservice for AI agent frameworks — short-term events, long-term episodes, knowledge graph, artifact registry, and LLM-powered smart operations."
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # REST
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # gRPC
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "grpcio-reflection>=1.68.0",
    "protobuf>=5.28.0",
    # Storage backends
    "redis[hiredis]>=5.0.0",
    "falkordb>=1.0.0",
    # Embeddings + LLM
    "openai>=1.50.0",
    "dspy>=2.5.0",
    # Config
    "dynaconf>=3.2.0",
    # Utilities
    "numpy>=1.26.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    # Event bus
    "nats-py>=2.7.0",
]

[project.scripts]
memory-service = "memory_service.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["src", "client"]

[tool.setuptools.package-data]
memory_service = ["data/*.jsonld", "data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

testpaths = ["tests"]
